fix fixed column on Change shift table

--- a/src/assets/scss/change-divison-shift.scss
+++ b/src/assets/scss/change-divison-shift.scss
@@ -63,13 +63,14 @@
           left: 0px;
       }
       .uid {
-          left: 45px;
+          left: 54px;
       }
       .full-name {
-          left: 165px;
+          left: 179px;
+          min-width: 235px;
       }
       .department {
-        left: 320px;
+        left: 410px;
       }
     }
 }
